package gameLaby.laby;

public class Epee extends ObjetRamassable {

    public Epee(int dx, int dy) {
        super(dx, dy);
    }

    public String toString() {
        return "C'est une epee";
    }
}
