package gameLaby.laby;

public class ObjetRamassable extends Position{

    private boolean equipe;

    public ObjetRamassable(int x, int y){
        super(x, y);
    }
}
